--- a/MechatronicsProject/nbproject/private/private.properties
+++ b/MechatronicsProject/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\aci17ah.SHEFUNIAD.000\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\drewh\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
